--- a/EnvModule/EnvModule.csproj
+++ b/EnvModule/EnvModule.csproj
@@ -99,9 +99,13 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mnn\Mnn.csproj">
+    <ProjectReference Include="..\MnnMisc\MnnMisc.csproj">
       <Project>{8C1BDA51-F559-4472-A895-6BF82C0A06DE}</Project>
-      <Name>Mnn</Name>
+      <Name>MnnMisc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MnnSocket\MnnSock.csproj">
+      <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
+      <Name>MnnSock</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
