--- a/MnnUtil/MnnUtil.csproj
+++ b/MnnUtil/MnnUtil.csproj
@@ -2,30 +2,27 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FCC6BB75-C6A5-487D-8D40-EEC3636FECCC}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{E58D40E9-DAFE-4564-9BAE-867025DB9051}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EnvCenter</RootNamespace>
-    <AssemblyName>EnvCenter</AssemblyName>
+    <RootNamespace>MnnUtil</RootNamespace>
+    <AssemblyName>MnnUtil</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\env\</OutputPath>
+    <OutputPath>..\bin\mnn\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,19 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ctrler.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ConvertUtil.cs" />
+    <Compile Include="CrcUtil.cs" />
+    <Compile Include="DegreeUtil.cs" />
+    <Compile Include="ExprSolve.cs" />
+    <Compile Include="HumiUtil.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="MsgAnalizeUitl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MnnSocket\MnnSock.csproj">
-      <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
-      <Name>MnnSock</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MnnUtil\MnnUtil.csproj">
-      <Project>{E58D40E9-DAFE-4564-9BAE-867025DB9051}</Project>
-      <Name>MnnUtil</Name>
-    </ProjectReference>
+    <Compile Include="RegUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
