Use namespace Mnn.MnnMisc.MnnDataHandle to instead Mnn.MnnDataHandle Use namespace Mnn.MnnMisc.MnnModule to instead Mnn.MnnModule Use namespace Mnn.MnnMisc.MnnSerial to instead Mnn.MnnSerialPort Set MnnSock's default to namespace Mnn.MnnSock Set MnnUtil's default to namespace Mnn.MnnUtil Set MnnMisc's default to namespace Mnn.MnnMisc

--- a/EnvCenter/EvnCenter.csproj
+++ b/EnvCenter/EvnCenter.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MnnSocket\MnnSock.csproj">
+    <ProjectReference Include="..\MnnSock\MnnSock.csproj">
       <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
       <Name>MnnSock</Name>
     </ProjectReference>
