--- a/MnnUtil/MnnUtil.csproj
+++ b/MnnUtil/MnnUtil.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{E58D40E9-DAFE-4564-9BAE-867025DB9051}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MnnUtil</RootNamespace>
+    <RootNamespace>Mnn.MnnUtil</RootNamespace>
     <AssemblyName>MnnUtil</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
