--- a/SockMgr/SockMgr.csproj
+++ b/SockMgr/SockMgr.csproj
@@ -122,7 +122,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MnnSocket\MnnSock.csproj">
+    <ProjectReference Include="..\MnnSock\MnnSock.csproj">
       <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
       <Name>MnnSock</Name>
     </ProjectReference>
