--- a/EnvModule/App.config
+++ b/EnvModule/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="ip" value="127.0.0.1" />
+    <add key="port" value="2000" />
+  </appSettings>
   <connectionStrings>
     <add name="QX_Entities" connectionString="metadata=res://*/QX.csdl|res://*/QX.ssdl|res://*/QX.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.200)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
     <add name="ZLS_Entities" connectionString="metadata=res://*/ZLS.csdl|res://*/ZLS.ssdl|res://*/ZLS.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.200)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
