--- a/Deprecated/SockDebug/ScokDebug.csproj
+++ b/Deprecated/SockDebug/ScokDebug.csproj
@@ -83,7 +83,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MnnSock\MnnSock.csproj">
+    <ProjectReference Include="..\..\MnnSock\MnnSock.csproj">
       <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
       <Name>MnnSock</Name>
     </ProjectReference>
