--- a/SockAttack/SockAttack.csproj
+++ b/SockAttack/SockAttack.csproj
@@ -48,10 +48,7 @@
     <Compile Include="SockAttack.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sockattack.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="SockAttack.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
