--- a/SockAttack/SockAttack.csproj
+++ b/SockAttack/SockAttack.csproj
@@ -48,7 +48,9 @@
     <Compile Include="SockAttack.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SockAttack.xml" />
+    <Content Include="SockAttack.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
