--- a/MnnSock/MnnSock.csproj
+++ b/MnnSock/MnnSock.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AtCmd.cs" />
     <Compile Include="Deprecated\AsyncSocketListenItem.cs" />
     <Compile Include="Deprecated\AsyncSocketListenManager.cs" />
     <Compile Include="Deprecated\AsyncSocketSender.cs" />
