--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,16 @@
-Thumbs.db
-*.obj
-*.exe
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.sln.docstates
-*.tlb
-*.tlh
-*.bak
-*.cache
-*.ilk
-*.log
-[Bb]in
-[Dd]ebug*/
-*.lib
-*.sbr
+// .gitignore
+
+bin/
 obj/
-[Rr]elease*/
-_ReSharper*/
-[Tt]est[Rr]esult*
-*.vssscc
-$tf*/
+*.suo
 
 .svn/
 Deprecated/SocketTransfer/
 Deprecated/ModTrial/
-Module*/
+ModuleDXS/
+ModuleQX/
+ModuleSK/
+ModuleTimerSK/
+ModuleZLS/
 ServiceSerialZLS/
 Oracle.DataAccess.dll
