--- a/Deprecated/SockDebug/SockDebug.csproj
+++ b/Deprecated/SockDebug/SockDebug.csproj
@@ -78,9 +78,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\MnnSock\MnnSock.csproj">
+    <ProjectReference Include="..\..\mnn\mnn.csproj">
       <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
-      <Name>MnnSock</Name>
+      <Name>mnn</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
