--- a/EnvModule/EnvModule.csproj
+++ b/EnvModule/EnvModule.csproj
@@ -100,13 +100,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MnnMisc\MnnMisc.csproj">
-      <Project>{8C1BDA51-F559-4472-A895-6BF82C0A06DE}</Project>
-      <Name>MnnMisc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MnnSock\MnnSock.csproj">
+    <ProjectReference Include="..\mnn\mnn.csproj">
       <Project>{4298E664-3238-45B4-8CDD-BA6764A3F2FF}</Project>
-      <Name>MnnSock</Name>
+      <Name>mnn</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
