--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -47,8 +47,8 @@
     <Compile Include="misc\env\MsgProc.cs" />
     <Compile Include="misc\module\AppDomainProxy.cs" />
     <Compile Include="misc\module\IModule.cs" />
-    <Compile Include="misc\module\ModuleItem.cs" />
-    <Compile Include="misc\module\ModuleManager.cs" />
+    <Compile Include="misc\module\ModuleNode.cs" />
+    <Compile Include="misc\module\ModuleCenter.cs" />
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
     <Compile Include="util\AtCmd.cs" />
