--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="misc\env\AtCommand.cs" />
     <Compile Include="misc\env\IMsgProc.cs" />
+    <Compile Include="misc\env\IMsgTrans.cs" />
     <Compile Include="misc\env\MsgCmd.cs" />
     <Compile Include="misc\env\MsgKey.cs" />
     <Compile Include="misc\env\MsgProc.cs" />
