--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -75,6 +75,7 @@
     <Compile Include="util\Logger.cs" />
     <Compile Include="util\MsgAnalizeUitl.cs" />
     <Compile Include="util\RegUtil.cs" />
+    <Compile Include="util\SmtpSender.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
