--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -53,9 +53,9 @@
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
     <Compile Include="net\ControlCenter.cs" />
-    <Compile Include="net\PackRequest.cs" />
+    <Compile Include="net\SockRequest.cs" />
     <Compile Include="net\Dispatcher.cs" />
-    <Compile Include="net\PackResponse.cs" />
+    <Compile Include="net\SockResponse.cs" />
     <Compile Include="util\AtCmd.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenItem.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenManager.cs" />
