--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -52,9 +52,9 @@
     <Compile Include="misc\module\ModuleCtl.cs" />
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
-    <Compile Include="net\ControlCenter.cs" />
+    <Compile Include="net\CtlCenterBase.cs" />
     <Compile Include="net\SockRequest.cs" />
-    <Compile Include="net\Dispatcher.cs" />
+    <Compile Include="net\DispatcherBase.cs" />
     <Compile Include="net\SockResponse.cs" />
     <Compile Include="util\AtCmd.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenItem.cs" />
@@ -74,7 +74,7 @@
     <Compile Include="util\ConvertUtil.cs" />
     <Compile Include="util\CrcUtil.cs" />
     <Compile Include="util\DegreeUtil.cs" />
-    <Compile Include="util\EncryptSym.cs" />
+    <Compile Include="net\EncryptSym.cs" />
     <Compile Include="util\ExprSolve.cs" />
     <Compile Include="util\HumiUtil.cs" />
     <Compile Include="util\Logger.cs" />
