Move directory ModuleTimerSK to ModuleTimer

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Deprecated/ModTrial/
 ModuleDXS/
 ModuleQX/
 ModuleSK/
-ModuleTimerSK/
+ModuleTimer/
 ModuleZLS/
 ModuleTranslate/
 ServiceSerialZLS/
