Start to develop 3.0.0 Rename CtlCenterBase to CoreBase Rename CtlCenter to Core Rename namespace mnn.ctlcenter to mnn.design

--- a/EnvConsole/EnvConsole.csproj
+++ b/EnvConsole/EnvConsole.csproj
@@ -80,7 +80,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CtlCenter.cs" />
+    <Compile Include="Core.cs" />
     <Compile Include="DataUI.cs" />
     <Compile Include="Unit\ModuleUnit.cs" />
     <Compile Include="Unit\ServerUnit.cs" />
