--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -56,10 +56,10 @@
     <Compile Include="misc\module\ModuleCtl.cs" />
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
-    <Compile Include="net\ctlcenter\CtlCenterBase.cs" />
-    <Compile Include="net\ctlcenter\SockClientTcp.cs" />
+    <Compile Include="design\CoreBase.cs" />
+    <Compile Include="net\SockClientTcp.cs" />
     <Compile Include="net\SockRequest.cs" />
-    <Compile Include="net\ctlcenter\DispatcherBase.cs" />
+    <Compile Include="design\DispatcherBase.cs" />
     <Compile Include="net\SockResponse.cs" />
     <Compile Include="util\AtCmd.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenItem.cs" />
